419 fix compound checkbox alignment above 1280 width

--- a/src/components/form/_form.scss
+++ b/src/components/form/_form.scss
@@ -46,3 +46,12 @@
     }
   }
 }
+
+@media (max-width: $breakpoint-tablet-to-desktop - 1) {
+  .form-responsive {
+    .field .checkbox-label,
+    .field .checkbox > label {
+      margin-top: -10px;
+    }
+  }
+}
